--- a/mediacore/public/admin/styles/media.css
+++ b/mediacore/public/admin/styles/media.css
@@ -314,7 +314,7 @@ tr.error td[headers='thf-type'] {
 	background: #deeffb url('../images/layout/table-head.png') repeat-x top;
 	margin: -10px -10px 5px -10px;
 	padding: 5px 10px;
-	width: 660px;
+	width: 638px;
 }
 #media-form #podcast-dropdown {
 	width: 120px;
